--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/request-promise": "^4.1.47",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "typescript": "^4.6.3"
   }
 }
