--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VERBOSE=false
 DELAY=1000
 CAPSOLVER=capsolver
-USERNAME=username
-PASSWORD=password
+FAST_CAPTCHA=true
+WIZARD_USERNAME=username
+WIZARD_PASSWORD=password
